# emoji-cheat-sheet-rs

./: Cargo.toml  readme.md
data/: categorized_emoji_ids.json
src/: main.rs
