[package]
name = "emoji-cheat-sheet-rs"
version = "0.1.0"
edition = "2021"
author = "hsqStephenZhang"
repository = "https://github.com/hsqStephenZhang/emoji-cheat-sheet-rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
select = "0.6.0"
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread", "net", "macros"] }
toml = "0.7.3"
unicode-segmentation = "1.8"
unicode_categories = "0.1.1"

